Change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frx",
+  "name": "f3b3",
   "version": "0.1.1-alpha",
   "description": "FE infratstructure based on React, Redux & Redux-Observable",
   "main": "dist/index.js",
