--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
-  "authors": ["Omer Spalter <admin@c0d3.io> (https://github.com/omerts)"],
+  "authors": [
+    "Omer Spalter <admin@c0d3.io> (https://github.com/omerts)"
+  ],
   "scripts": {
     "build": "tsc"
   },
-  "files": ["dist/**/*"],
+  "files": [
+    "dist/**/*"
+  ],
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "redux": "^4.1.1",
-    "rxjs": "^7.4.0",
-    "@react-navigation/native": "^6.0.8"
+    "@react-navigation/native": "^6.1.9",
+    "react": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "rxjs": "^7.8.1"
   },
   "peerDependenciesMeta": {
     "@react-navigation/native": {
@@ -23,25 +27,30 @@
     }
   },
   "dependencies": {
-    "history": "^5.0.1",
-    "immer": "^9.0.6",
+    "history": "^5.3.0",
+    "immer": "^10.0.3",
     "lodash": "^4.17.21",
     "redux-observable": "^2.0.0",
     "route-parser": "^0.0.5",
     "url-parser": "^0.0.1"
   },
   "devDependencies": {
-    "@react-navigation/native": "^6.0.8",
-    "@types/react": "^17.0.20",
-    "react": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "redux": "^4.1.1",
-    "rxjs": "^7.4.0",
-    "typescript": "^4.4.3"
+    "@react-navigation/native": "^6.1.9",
+    "@types/react": "^18.2.33",
+    "react": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "rxjs": "^7.8.1",
+    "typescript": "^5.2.2"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/omerts/f3b3.git"
   },
-  "keywords": ["react", "redux", "rxjs", "micro fe"]
+  "keywords": [
+    "react",
+    "redux",
+    "rxjs",
+    "micro fe"
+  ]
 }
