--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "f3b3",
-  "version": "0.1.13-alpha",
+  "version": "1.0.0",
   "description": "FE infratstructure based on React, Redux & Redux-Observable",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
