--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": "src",
-    "target": "es5",
+    "target": "es6",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -18,6 +18,7 @@
     "declaration": true,
     "declarationMap": true
   },
+  "moduleSuffixes": [".ios", ".android", ".native", ""],
   "include": ["src"],
   "exclude": ["node_modules", "**/__tests__/*"]
 }
