--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "f3b3",
-  "version": "1.0.8",
+  "version": "1.1.2",
   "description": "FE infratstructure based on React, Redux & Redux-Observable",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@react-navigation/native": "^6.1.9",
+    "@types/lodash": "^4.14.201",
     "@types/react": "^18.2.33",
     "react": "^18.2.0",
     "react-redux": "^8.1.3",
